--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
 body {
 
   width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
   overflow: auto;
@@ -9,4 +10,8 @@ body {
 }
 .index{
   margin-top: -20px;
+}
+#app{
+  width: 100%;
+  height: 100%;
 }
