--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -9,7 +9,7 @@ ul,li{
     width: 100%;
     background: url("../images/milky-way.jpg");
     min-width: 860px;
-    height: 100%;
+    height: 717px;
 }
 .login{
     position: absolute;
